bug fix + review page
bugfix for finalize booking & review page added

--- a/MeraFilms/client/components/navbar/navbar.html
+++ b/MeraFilms/client/components/navbar/navbar.html
@@ -24,7 +24,8 @@
         <li ng-show="nav.isAdmin()"><a href="/cinemas">Cinema</a></li>
         <li ng-show="nav.isAdmin()"><a href="/movie">Movie</a></li>
         <li ng-show="nav.isAdmin()"> <a href="/schedule-movies">Schedule Movies</a></li>
-        <li><a href="/book">Book Tickets</a></li>
+        <li><a href="/">Book Tickets</a></li>
+        <li><a href="/review">Movie Reviews</a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
