--- a/MeraFilms/client/components/footer/footer.html
+++ b/MeraFilms/client/components/footer/footer.html
@@ -1,4 +1,8 @@
-<div class="container">
-  <p>Mera Films Pvt. Ltd.  |
-    <a href="https://twitter.com/merafilms">@merafilm</a>  </p>
+<div class="container-fluid">
+<div style="background-color: #a9a9a9; text-align: center; color: white; height: 60px">
+
+  <h3>
+  <br />  Mera Films Pvt. Ltd.  |
+    <a href="https://twitter.com/merafilms">@merafilm</a>  </h3>
+</div>
 </div>
