--- a/MeraFilms/client/components/navbar/navbar.html
+++ b/MeraFilms/client/components/navbar/navbar.html
@@ -25,7 +25,7 @@
         <li ng-show="nav.isAdmin()"><a href="/movie">Movie</a></li>
         <li ng-show="nav.isAdmin()"> <a href="/schedule-movies">Schedule Movies</a></li>
         <li><a href="/">Book Tickets</a></li>
-        <li><a href="/review">Movie Reviews</a></li>
+        <li><a href="/review">Movie Reviews & Trailers</a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
